# grpc-examples

./: README.md  go.mod
greeter_server/: svr_main.go
grpc-cpp/proto/: mathtest.pb.cc  mathtest.pb.h  mathtest.proto
grpc-go/: README.md
grpc-go/greeter_client/: cli_main.go
grpc-go/proto/: helloworld.pb.go
grpc_demo_async/: CMakeLists.txt  greeter_async_server.cc  helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.proto  run_cli.sh
grpc_demo_sync/: CMakeLists.txt  greeter_client.cc  greeter_server.cc  run.sh  run_svr.sh
grpc_demo_sync/async/: greeter_async_client.cc  greeter_async_client2.cc
proto/: helloworld.proto  helloworld_grpc.pb.go
